# hello_rocket

./: Cargo.toml  README.md
migrations/2019-06-24-154421_create_post/: down.sql  up.sql
src/: lib.rs  main.rs
src/db/: schema.rs
src/db/models/: posts.rs
src/graphql/: mod.rs  star_wars.rs
src/routes/: hello.rs  posts.rs
