[package]
name = "hello_rocket"
version = "0.1.0"
authors = ["Vlady Veselinov <vladkodmc@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
rocket = "0.4.2"
serde = {version = "1.0.94", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
juniper = "0.11"
dotenv = "0.14.0"
validator = "0.8.0"
validator_derive = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]